--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "unp.h": "c",
         "config.h": "c",
-        "err.h": "c"
+        "err.h": "c",
+        "inet.h": "c"
     }
 }
