chapter 16: add some nonblock example c file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "unp.h": "c",
         "config.h": "c",
         "err.h": "c",
-        "inet.h": "c"
+        "inet.h": "c",
+        "nonblock_web.h": "c"
     }
 }
