chapter 17: add ioctl_prifinfo.c file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "config.h": "c",
         "err.h": "c",
         "inet.h": "c",
-        "nonblock_web.h": "c"
+        "nonblock_web.h": "c",
+        "if.h": "c"
     }
 }
