chapter 18: add route_checkudpsum.c file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "nonblock_web.h": "c",
         "if.h": "c",
         "if_arp.h": "c",
-        "unpifi.h": "c"
+        "unpifi.h": "c",
+        "udp_var.h": "c"
     }
 }
