chapter 21: update mysdr_main.c file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "if_arp.h": "c",
         "unpifi.h": "c",
         "udp_var.h": "c",
-        "setjmp.h": "c"
+        "setjmp.h": "c",
+        "mysdr.h": "c"
     }
 }
