--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
         "ssntp_ntp.h": "c",
         "socket.h": "c",
         "trace.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
